# videopoker-solver

./: CMakeLists.txt  Jenkinsfile  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/vps/: bitcards.hpp  combo.hpp  enum.hpp  solver.hpp
lib/src/: solver.cpp
tests/: CMakeLists.txt
tests/src/: eval.cpp  iter.cpp  nominal.cpp  solver.cpp
