file(GLOB_RECURSE sources CONFIGURE_DEPENDS "src/*.cpp")
foreach(source ${sources})
    cmake_path(GET source FILENAME name)
    cmake_path(REMOVE_EXTENSION name)
    string(PREPEND name "${CMAKE_PROJECT_NAME}-test-")
    add_executable(${name} ${source})
    add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}>)
    target_link_libraries(${name} PRIVATE "${CMAKE_PROJECT_NAME}-lib" GTest::gtest GTest::gtest_main)
endforeach()
